<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/bt_agendamento"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_agendamentos" />

    <Button
        android:id="@+id/bt_meus_dados"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_meusdados" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_agandar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sair" />

</LinearLayout>